Update Reverse Geocoding using Google Maps (for Github).ipynb

--- a/Reverse Geocoding/Reverse Geocoding using Google Maps (for Github).ipynb
+++ b/Reverse Geocoding/Reverse Geocoding using Google Maps (for Github).ipynb
@@ -18,7 +18,7 @@
     "df[\"geom\"] = df[\"lat\"].map(str)+','+df[\"lng\"].map(str)\n",
     "df[\"geom\"][0]\n",
     "\n",
-    "gmaps = googlemaps.Client(key='AIzaSyCjh0vND7-o_3jOB_dFctG51QqcTVuhUDw')\n",
+    "gmaps = googlemaps.Client(key='PUT YOUR GOOGLE MAP API KEY')\n",
     "\n",
     "for i in range(0,19503):\n",
     "    reverse_geocode_result=gmaps.reverse_geocode((df[\"geom\"][i]), language='en')\n",
